--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section class="left-section">
             <section class="left-section-content">
                 <div class="profile">
-                    <img class="profile-image" src="img/profile-image.jpg" alt="Profile image">
+                    <img class="profile-image" src="img/profile-image.jpeg" alt="Profile image">
                     <p class="name">Paula Prado</p>
                     <p class="profession">Product Owner</p>
                 </div>
