--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paula Prado CV</title>
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
     <main class="resume-contents">
         <section class="left-section">
@@ -29,22 +31,23 @@
                 <div class="skills">
                     <p class="left-title">Skills</p>
                     <ul>
-                        <li><p>HTML, CSS, Git e Github</p></li>
+                        <li>
+                            <p>HTML, CSS, Git e Github</p>
+                        </li>
                     </ul>
                 </div>
             </section>
-            </section> 
-            <section class="right-section">
-                <div class="right-section-contents">
-                    <section class="about gap">
-                        <div class="right-title">Sobre Mim</div>
-                        <p class="about-me-contents">
-                            Olá sou a Paula.<br>
-                            <br> Um pouco mais sobre o que faço
-                            <br> Quais são minhas competências 
-                        </p>
-                    </section>
-                </div>
+        </section>
+            <div class="right-section-contents">
+                <section class="about gap">
+                    <div class="right-title">Sobre Mim</div>
+                    <p class="about-me-contents">
+                        Olá sou a Paula.<br>
+                        <br> Um pouco mais sobre o que faço
+                        <br> Quais são minhas competências
+                    </p>
+                </section>
+            </div>
             <section class="experience gap">
                 <div class="right-title">Expeciencia</div>
                 <div class="experience-contents">
@@ -56,11 +59,29 @@
                         <p class="exp-position">Comercial</p>
                         <p class="exp-desc">
                             Descreva as principais atividades</p>
-                            </div>
-                </div>                            
-            </section>        
-            </section>
+                    </div>
+                </div>
+            <section class="education gap">
+                <div class="right-title">Formação Academica</div>
+                <div class="education-contents">
+                <div class="Education-left">
+                  <p class="education-school-name">PUC</p>
+                  <p class="education-time-period">2021-2023</p>
+                </div>
+                  <div class="education-right">
+                    <p class="education-subject">Engenharia de Software</p>
+                    <p class="education-desc">
+                        Pós graduação em engenharia de software
+                    </p>
+                    </div>
+                </div>
+
+
+                </section>
+    </section>
         </section>
-    </main>   
+        </section>
+    </main>
 </body>
+
 </html>
