fixes index.html

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paula Prado CV</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 
 <body>
     <main class="resume-contents">
         <section class="left-section">
-            <section class="left-section-content">
+            <div class="left-section-content">
                 <div class="profile">
                     <img class="profile-image" src="img/profile-image.jpeg" alt="Profile image">
                     <p class="name">Paula Prado</p>
@@ -36,8 +36,9 @@
                         </li>
                     </ul>
                 </div>
-            </section>
+            </div>
         </section>
+        <section class="right-section">
             <div class="right-section-contents">
                 <section class="about gap">
                     <div class="right-title">Sobre Mim</div>
@@ -47,7 +48,6 @@
                         <br> Quais são minhas competências
                     </p>
                 </section>
-            </div>
             <section class="experience gap">
                 <div class="right-title">Expeciencia</div>
                 <div class="experience-contents">
@@ -60,6 +60,7 @@
                         <p class="exp-desc">
                             Descreva as principais atividades</p>
                     </div>
+                </section>
                 </div>
             <section class="education gap">
                 <div class="right-title">Formação Academica</div>
@@ -73,14 +74,16 @@
                     <p class="education-desc">
                         Pós graduação em engenharia de software
                     </p>
-                    </div>
                 </div>
-
-
-                </section>
+            </div>
+        </section>
+        <section class="awards gap">
+        </div>
+            <div class="right-title">Cursos</div>
+            <div class"awards-contents">
+                <p class"awards-company-name>Elastic</p>
+                <p class"awards-time-period>Elastic</p> 
     </section>
-        </section>
-        </section>
     </main>
 </body>
 
