feature:updateindex.html

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
                         <p class="exp-desc">
                             Descreva as principais atividades</p>
                     </div>
-                </section>
-                </div>
+            </div>
+            </section>
             <section class="education gap">
                 <div class="right-title">Formação Academica</div>
                 <div class="education-contents">
-                <div class="Education-left">
+                <div class="education-left">
                   <p class="education-school-name">PUC</p>
                   <p class="education-time-period">2021-2023</p>
                 </div>
@@ -78,11 +78,12 @@
             </div>
         </section>
         <section class="awards gap">
-        </div>
             <div class="right-title">Cursos</div>
-            <div class"awards-contents">
-                <p class"awards-company-name>Elastic</p>
-                <p class"awards-time-period>Elastic</p> 
+            <div class="awards-contents">
+                <p class="awards-company-name">Elastic</p>
+                <p class="awards-time-period">Elastic</p> 
+    </section>
+    </div>
     </section>
     </main>
 </body>
